# slack_cmd

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
core/: Cargo.toml
core/src/: default_help_handler.rs  handler.rs  lib.rs  listener.rs  slack_cli.rs  state.rs  utils.rs
core/src/slack_cli/: cli_impl.rs
examples/: Cargo.toml
examples/src/: bot_info.rs  jira_create_ticket.rs
handlers/: Cargo.toml
handlers/src/: info.rs  jira.rs  lib.rs
src/core/: Cargo.toml
src/core/src/: lib.rs  listener.rs  slack_cli.rs  slack_msg.rs
src/core/src/slack_cli/: cli_impl.rs
src/examples/: Cargo.toml
src/examples/src/: handlers_example.rs
src/handlers/: Cargo.toml
