[workspace]
members = [
    "core",
    "examples",
    "handlers",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.88"
slack-morphism = { version = "2.1", features = ["hyper", "axum"] }
tokio = "1.37.0"
async-trait = "0.1.79"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
chrono = "0.4.37"
rsb_derive = "0.5.1"
env_logger = "0.11.2"
log = "0.4.21"
dashmap = "6.1.0"
clap = {  version="4.5.17", features = ["derive"] }
shlex = "1.3.0"
