[workspace]
members = [
    "src/core",
    "src/examples",
    "src/handlers",
]
resolver = "2"

[workspace.package]
version = "0.0.5"
edition = "2021"
authors = ["Sild <sildtm@icloud.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sild/slack_cmd"
rust-version = "1.80"
keywords = ["slack", "app", "cmd", "handler"]
readme = "README.md"
publish = false

[workspace.dependencies]
anyhow = "1.0.88"
slack-morphism = { version = "2.1", features = ["hyper", "axum"] }
tokio = "1.37.0"
async-trait = "0.1.79"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
chrono = "0.4.37"
rsb_derive = "0.5.1"
env_logger = "0.11.2"
log = "0.4.21"
dashmap = "6.1.0"
clap = {  version="4.5.17", features = ["derive"] }
shlex = "1.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
serde = { version = "1.0.128", features = ["derive"] }

# internal deps
slack_cmd_core = { version = "0.0" }
slack_cmd_handlers = { version = "0.0" }

[patch.crates-io]
slack_cmd_core = { path = "src/core" }
slack_cmd_handlers = { path = "src/handlers" }
