[package]
name = "slack_cmd_examples"
publish = false
keywords.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "jira_create_ticket"
path = "src/jira_create_ticket.rs"

[[bin]]
name = "bot_info"
path = "src/bot_info.rs"


[dependencies]
tokio.workspace = true
anyhow.workspace = true
env_logger.workspace = true
clap.workspace = true

# internal deps
slack_cmd_core.workspace = true
slack_cmd_handlers.workspace = true
