[package]
name = "slack_cmd_core"
publish = true
description = "Turns slack chat into a terminal using your own handlers"
keywords.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "slack_cmd_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
slack-morphism.workspace =  true
tokio.workspace =  true
async-trait.workspace =  true
tracing-subscriber.workspace =  true
tracing.workspace =  true
chrono.workspace = true
rsb_derive.workspace =  true
env_logger.workspace =  true
log.workspace = true
dashmap.workspace =  true
clap.workspace = true
shlex.workspace = true
#rustls.workspace = true
