[package]
name = "slack_cmd_examples"
publish = false
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "handlers_example"
path = "src/handlers_example.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
env_logger.workspace = true

# internal deps
slack_cmd_core.workspace = true
slack_cmd_handlers.workspace = true
