[package]
name = "slack_cmd_handlers"
publish = true
description = "Few prepared handlers for slack_cmd_core"
keywords.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "slack_cmd_handlers"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
log.workspace = true
clap.workspace = true
shlex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true

# internal deps
slack_cmd_core.workspace = true
